# temporal-large-payload-codec

./: .gitignore  .golangci.yml  .goreleaser.yaml  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE-3rdparty.csv  Makefile  README.md  codec.go  codec_test.go  go.mod  go.sum  go.work  go.work.sum  pyproject.toml
.github/workflows/: ci.yaml  release-please-config.json  release-please-manifest.json  release.yaml
cmd/server/: main.go  main_test.go
codec/: CHANGELOG.md  codec.go  codec_test.go  go.mod  go.sum
codec/python/: codec.py  pyproject.toml
internal/: go.mod  go.sum
internal/driver/: interface.go
internal/driver/memory/: memory.go  memory_test.go
internal/driver/minio/: minio.go
internal/driver/s3/: s3.go
internal/e2etest/: e2e_test.go  worker.go
internal/server/: server.go
internal/tools/copyright/: main.go
internal/tools/licensecheck/: main.go
logging/: logger.go  nooplogger.go  stdlogger.go
proto/codec/: codec.proto
server/: e2e_test.go  go.mod  go.sum  server.go  server_test.go
server/cmd/: main.go  main_test.go
server/handler/v1/: handler.go
server/handler/v2/: handler.go  handler_test.go
server/logging/: nooplogger.go  stdlogger.go
server/storage/: driver.go  interface.go
server/storage/azure/: azure.go  azure_test.go
server/storage/gcs/: gcs.go  gcs_test.go
server/storage/memory/: memory.go  memory_test.go
server/storage/s3/: s3.go  (+1 more)
testdata/TestV1Codec/: payload_exceeds_max_byte_limit
testdata/TestV2Codec/: large_payload_no_prefix  large_payload_with_prefix  payload exceeds max byte limit
(+1 files in other folders)
