[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["grantfuhr <grant.fuhr@datadoghq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
temporalio = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
